<resources>
    <string name="app_name">FromU</string>
    <!-- common -->
    <string name="before">이전</string>
    <string name="next">다음</string>
    <string name="slash">/</string>
    <string name="done">완료</string>
    <string name="modify">수정</string>
    <string name="network_error">서버와의 연결이 원활하지 않습니다.</string>
    <string name="year_hint">YYYY</string>
    <string name="month_hint">MM</string>
    <string name="day_hint">DD</string>
    <string name="ok">알겠어</string>
    <string name="day">%s일</string>
    <string name="month">%s월</string>
    <string name="change">변경하기</string>
    <string name="contents_hint">내용을 입력해주세요</string>
    <string name="contents_length_max_300">%d/300</string>
    <string name="contents_length_max_200">%d/200</string>
    <string name="contents_length_max_100">%d/100</string>
    <string name="purchase">구매하기</string>
    <string name="back">돌아가기</string>
    <string name="send">보내기</string>
    <string name="report">신고하기</string>
    <string name="delete">삭제하기</string>
    <string name="edit">편집하기</string>
    <string name="delete_confirm_mention">해당 일정을 삭제 할꺼야?</string>

    <!-- error -->
    <string name="load_img_failure_msg">이미지를 불러오는 데 실패하였습니다.</string>
    <string name="exist_write_diary">이미 일기를 작성했어!\n상대방에게 일기장을 보내줘</string>

    <!-- splash -->
    <string name="splash_welcome">당신으로부터,</string>

    <!-- on_boarding -->
    <string name="on_boarding_first">연인과 서로의 일상을 공유하는\n교환일기를 작성해볼까?</string>
    <string name="on_boarding_second">일기가 쌓이면 우리만의 일기장을\n실제로 배송받을 수 있어!</string>
    <string name="on_boarding_third">우리의 이야기를 편지를 통해\n다른 커플과 공유도 해볼 수 있어!</string>
    <string name="on_boarding_skip">건너뛰기</string>
    <string name="on_boarding_starting">시작하기</string>

    <!-- login -->
    <string name="login_google">Google로 로그인하기</string>
    <string name="login_kakao">카카오로 로그인하기</string>


    <!-- sign_up -->
    <string name="nickname_title">반가워,\n너의 닉네임을 정해줘</string>
    <string name="nickname_subtitle">상대방과 함께하는 애칭도 좋아!</string>
    <string name="nickname_contents_hint">예) 프롬이</string>
    <string name="nickname_warring_msg">5글자 이내(특수문자 및 공백 제외)</string>

    <string name="birthday_title">너의 생일을 알려줘!</string>
    <string name="gender_title">너의 성별을 알려줘!</string>
    <string name="gender_male">남성</string>
    <string name="gender_female">여성</string>


    <!-- terms -->
    <string name="terms_title">%s,\n안녕.</string>
    <string name="terms_agree">동의하고 시작할래!</string>
    <string name="terms_of_user">(필수)이용약관</string>
    <string name="terms_personal_information">(필수)개인 정보 수집/이용 동의</string>


    <!-- invitation -->
    <string name="invitation_title">너에게 코드를 줄게.\n너의 연인과 연결해보자!</string>
    <string name="invitation_send">초대장 보내기</string>
    <string name="invitation_input_code">연인의 코드 입력하기</string>
    <string name="invitation_input_code_title">연인의 코드를 입력해줘!</string>
    <string name="invitation_input_code_hint">FROMU123</string>
    <string name="invitation_input_code_info_msg">8글자(특수문자 및 공백 제외)</string>
    <string name="invitation_input_code_connect">연결하기</string>
    <string name="invitation_description_title">새로고침 아이콘을 눌러,\n연인과의 연결상태를 확인해봐!</string>
    <string name="invitation_matching_not_yet">연인과의 연결이 완료되지 않았어!</string>
    <string name="invitation_send_msg">당신의 연인 \'%s\'로부터 초대장이 도착했어.\n링크를 눌러 우리와 함께 할래?\n\n커플코드:\n%s \n\n%s</string>
    <string name="invitation_already_exist_msg">이미 매칭이 완료된 유저야! 새로고침을 눌러봐</string>
    <string name="invitation_not_exist_msg">존재하지 않는 코드를 입력했어!</string>
    <string name="invitation_match_success_title">%s,\n그리고 %s.\n\n프롬유에 온 걸 환영해!</string>

    <!-- decide_mail_box_name -->
    <string name="decide_mail_box_name_title">둘만의 우편함 이름을 정해줄래?</string>
    <string name="decide_mail_box_name_hint">예) 프롬프롬함</string>
    <string name="decide_mail_box_confirm">이 이름으로 결정하기!</string>
    <string name="decide_mail_box_name_invalid_error_msg">4글자 이내(특수문자 및 공백 제외)</string>
    <string name="decide_mail_box_name_duplication_error_msg">중복되는 우편함 이름이야! 다른 걸로 변경해줘</string>

    <!-- main -->
    <string name="main_nav_diary">일기장</string>
    <string name="main_nav_calendar">달력</string>
    <string name="main_nav_letter">우편함</string>
    <string name="main_nav_my_home">우리집</string>

    <!-- alarm -->
    <string name="alarm_title">알림</string>
    <string name="alarm_no_item">아직 알람이 없어!</string>

    <!-- first_met_day -->
    <string name="first_met_day_appbar_title">디데이 설정</string>
    <string name="first_met_day_title">연인과 처음 만난 날을 알려줘!</string>

    <!-- diary -->
    <string name="diary_bell"><u>띵동! 벨 울리기</u></string>
    <string name="diary_dday_front_title">사랑한 지</string>
    <string name="diary_dday_back_title">일 째</string>
    <string name="diary_dday_tooltip">처음 만난 날을 설정해주세요!</string>
    <string name="diary_dday_add">아직 일기장이 없어\n하나 추가해 볼까?</string>
    <string name="diary_diary_send">일기장 전송하기</string>
    <string name="diary_no_got_title">지금은 나에게 일기장이 없어\n%s에게 벨을 울려볼까?</string>
    <string name="diary_popup_no_write">일기를 작성하지 않으면\n상대방에게 일기를 보낼 수 없어</string>
    <string name="diary_create_success">하루에 한 번,\n서로의 일상을 공유해보자!</string>
    <string name="diary_spend_all_bell">벨 울리기 횟수를 다 썼어\n12시간 뒤 충전될 예정이야</string>
    <string name="diary_book_go_to_partner">연인에게로 일기가 가고 있어!</string>
    <string name="diary_book_come_to_me">내게로 일기가 오고 있어!</string>
    <string name="ring_bell_msg">띵동!띵동! 벨을 울렸어!</string>

    <!-- create_diary -->
    <string name="pick_cover_title">일기장의 표지를 골라줘!</string>
    <string name="decide_name_warring">5글자 이내(공백 제외)</string>
    <string name="decide_name_hint">예) 우리기록♥</string>
    <string name="decide_name_title">일기장의 이름을 정해줘!</string>

    <!-- inside_diary -->
    <string name="contents_from">From.%s의 기록</string>
    <string name="emotion_weather">감정날씨:</string>
    <string name="current_position">%d/%d</string>
    <string name="go_last_page">마지막 페이지로 ></string>
    <string name="change_first_page_img">사진을 변경하고 싶어?</string>
    <string name="description_swipe">스와이프로 일기를 넘겨봐!</string>
    <string name="description_add">일기추가 아이콘을 눌러\n일기를 작성해봐!</string>
    <string name="index_title">목차</string>


    <!-- calendar -->
    <string name="schedule_add">일정 추가하기</string>
    <string name="no_schedule">예정된 일정이 없어</string>
    <string name="detail_schedule_invalidate_msg">20자 이내</string>
    <string name="detail_schedule_add_title">일정을 추가해줘!</string>
    <string name="detail_schedule_modify_title">일정을 수정할래?</string>

    <!-- mail_box -->
    <string name="mail_box_title">%s의 이야기를\n다른 우편함으로 전송해볼까?</string>
    <string-array name="mail_list_tab_menu">
        <item>받은 편지</item>
        <item>보낸 편지</item>
    </string-array>
    <string name="mail_list_title">우편함</string>
    <string name="receive_mail_list_empty">아직 받은 편지가 없어요!</string>
    <string name="send_mail_list_empty">아직 보낸 편지가 없어요!</string>
    <string name="send_mail_list_title">%s으로 편지를 보냈어.</string>
    <string name="receive_mail_list_title">%s에서 편지를 받았어.</string>
    <string name="mail_list_date">%s. %s</string>
    <string name="letter_to">To. %s</string>
    <string name="letter_from">from, %s</string>
    <string name="letter_date">%s. %s. %s %s %s:%s</string>
    <string name="first_open_letter">%s에서 편지가 도착했어!</string>
    <string name="already_reply_letter">이미 답장을 보냈어!</string>
    <string name="reply_letter">답장하기</string>
    <string name="select_stamp_title">편지에 사용할 우표를 골라줘!</string>
    <string name="write_start_title">편지를 작성해보자!\n우리의 이야기를 자랑해도 좋고,\n고민을 털어놔도 좋아 :)</string>
    <string name="select_stamp_empty_title">텅! 비었어!</string>
    <string name="send_write_letter">편지 보내기</string>
    <string name="reply_write_letter">답장 보내기</string>
    <string name="already_say_thank_you">이미 감사 인사를 했어!</string>
    <string name="say_thank_you">감사 인사하기</string>
    <string name="check_reply">편지의 답장은 한 번만 가능해서,\n내가 쓰면 상대방은 쓰지 못해</string>
    <string name="post_letter_success_title">%s으로 편지를 보냈어!</string>
    <string name="stamp_box_purchase"><u>구매하기</u></string>
    <string name="purchase_stamp_subtitle">우표에 따라 편지지가 달라질 거야.</string>
    <string name="purchase_stamp_title">어떤 우표를 구매하고 싶어?</string>
    <string name="stamp_box_appbar_title">우표함</string>
    <string name="purchase_stamp_appbar_title">우표구매</string>
    <string name="lack_from">헉...프롬이 부족해...</string>
    <string name="success_purchase_stamp">오예! 성공적으로 구매했어!</string>
    <string name="rate_letter_title">별점 남기기</string>
    <string name="rate_letter_introduce">편지의 답장이 마음에 들었다면,\n별점을 남겨줘!</string>
    <string name="rate_letter_introduce2">별점 점수를 통해\n답장을 보내준 커플에게 프롬을 줄거야.</string>
    <string name="rate_send_check">정말 이 별점으로 보낼까?</string>
    <string name="rate_letter_send">별점보내기</string>
    <string name="report_letter_introduce">이 사용자를 신고할까요?</string>
    <string name="report_letter_success">신고가 접수되었습니다.\n확인 후 조치하도록 하겠습니다.</string>
    <string name="rate_letter_already_send">이미 별점을 남겼어!</string>
    <!-- my_home -->

    <!-- setting -->
    <string name="setting_title">설정</string>
    <string name="account_management">계정 정보 및 관리</string>
    <string name="notice_inquire">공지/문의하기</string>
    <string name="app_info">앱 정보</string>
    <string name="logout">로그아웃</string>
    <string name="break_matching">커플매칭 끊기</string>
    <string name="withdrawal">탈퇴하기</string>
    <string name="alarm_msg_setting">알람 메세지 설정</string>
    <string name="mail_box_setting">우편함 설정</string>
    <string name="alarm_msg_title">알람 메세지</string>
    <string name="alarm_msg_comment">연인에게 울릴\n알람 메세지를 바꿔볼래?</string>
    <string name="alarm_msg_menu_1">오늘 너의 하루가 궁금해:)</string>
    <string name="alarm_msg_menu_2">쟈깅 일기쓰고 있어?</string>
    <string name="alarm_msg_menu_3">빨리 일기장 내놔 -ㅅ-</string>
    <string name="alarm_msg_done">변경완료</string>
    <string name="alarm_hint">직접 입력하기</string>
    <string name="logout_dialog_contents">정말 로그아웃 할 거야?</string>
    <string name="logout_do">로그아웃하기</string>
    <string name="break_matching_contents">연결을 끊으면, 모든 내역이 삭제 돼...\n우리와 계속 함께하지 않겠어?</string>
    <string name="break_matching_disconnect">연결 끊기</string>
    <string name="break_matching_continue">함께하기</string>
    <string name="break_matching_title">커플연결 끊기</string>
    <string name="break_matching_introduce">커플 연결을 끊으려고?</string>
    <string name="break_matching_dialog_contents">정말 상대방과 연결을 끊을거야?</string>
    <string name="withdrawal_dialog_contents">정말 우리를 떠날거야...?</string>
    <string name="withdrawal_contents">탈퇴하면 모든 내역이 삭제 돼...\n우리와 계속 함께하지 않겠어?</string>
    <string name="withdrawal_introduce">프롬유를 탈퇴하려고?</string>
    <string name="setting_terms">이용약관</string>
    <string name="setting_personal_info">개인정보처리방침</string>
    <string name="setting_app_info_title">앱 정보</string>
    <string name="alarm_setting_condition">20글자 이내(영어, 숫자, 특수문자 및 공백 포함)</string>
</resources>