<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.fromu.fromu.viewmodels.SignupViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rootView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_nickname_title"
            style="@style/BalsamTint.000000.24dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nickname_title"
            app:layout_constraintEnd_toEndOf="@+id/gl_end"
            app:layout_constraintStart_toStartOf="@+id/gl_start"
            app:layout_constraintTop_toTopOf="@id/gl_v_1475"
            app:lineHeight="28dp" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_nickname_subtitle"
            style="@style/BalsamTint.6f6f6f.20dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/nickname_subtitle"
            app:layout_constraintEnd_toEndOf="@+id/gl_end"
            app:layout_constraintStart_toStartOf="@+id/gl_start"
            app:layout_constraintTop_toBottomOf="@+id/tv_nickname_title" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/gl_end"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintTop_toBottomOf="@+id/gl_v_3300">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_contents"
                style="@style/BalsamTint.000000.24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="center"
                android:hint="@string/nickname_contents_hint"
                android:inputType="text"
                android:maxLength="5"
                android:textColorHint="@color/color_999999"
                android:textCursorDrawable="@drawable/cursor_bg_a735ff"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/v_nickname_underline"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10.5dp"
                android:background="@drawable/selector_bg_unclick_dedee2_click_a735ff"
                app:layout_constraintTop_toBottomOf="@+id/et_contents" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_warring_msg"
                style="@style/BalsamTint.6f6f6f.18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/nickname_warring_msg"
                app:layout_constraintTop_toBottomOf="@+id/v_nickname_underline" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:fitsSystemWindows="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/gl_end"
            app:layout_constraintStart_toStartOf="@+id/gl_start">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_nickname_next"
                style="@style/PretendardRegular.ffffff.24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_bg_disable_dedee2_enable_c983ff_radius_8"
                android:enabled="@{vm.isValidNickname()}"
                android:gravity="center"
                android:paddingVertical="18.5dp"
                android:text="@string/next"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_v_1475"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1475" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_v_3300"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3300" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>