<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.fromu.fromu.viewmodels.FirstMetDayViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_first_met_day_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:src="@drawable/ic_back_6f6f6f"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/gl_v_0591" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/PretendardRegular.000000.14dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_met_day_appbar_title"
            app:layout_constraintBottom_toBottomOf="@+id/iv_first_met_day_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/iv_first_met_day_back" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_first_met_day_title"
            style="@style/Cafe24SsurroundAir.000000.20dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/first_met_day_title"
            app:layout_constraintEnd_toEndOf="@+id/gl_end"
            app:layout_constraintStart_toStartOf="@+id/gl_start"
            app:layout_constraintTop_toTopOf="@id/gl_v_1475"
            app:lineHeight="28dp" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_first_met_day_contents"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/gl_end"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintTop_toBottomOf="@+id/gl_v_3300">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_first_met_day_year"
                style="@style/PretendardRegular.000000.18dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:background="@null"
                android:gravity="center"
                android:hint="@string/year_hint"
                android:inputType="date"
                android:maxLength="4"
                android:nextFocusForward="@id/et_first_met_day_month"
                android:textColorHint="@color/color_999999"
                android:textCursorDrawable="@drawable/cursor_bg_a735ff"
                app:layout_constraintEnd_toStartOf="@+id/tv_first_met_day_slash_1"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_first_met_day_slash_1"
                style="@style/PretendardRegular.999999.18dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:text="@string/slash"
                app:layout_constraintBaseline_toBaselineOf="@id/et_first_met_day_year"
                app:layout_constraintEnd_toStartOf="@+id/et_first_met_day_month"
                app:layout_constraintStart_toEndOf="@+id/et_first_met_day_year" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_first_met_day_month"
                style="@style/PretendardRegular.000000.18dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:background="@null"
                android:gravity="center"
                android:hint="@string/month_hint"
                android:inputType="date"
                android:maxLength="2"
                android:textColorHint="@color/color_999999"
                android:textCursorDrawable="@drawable/cursor_bg_a735ff"
                app:layout_constraintEnd_toStartOf="@+id/tv_first_met_day_slash_2"
                app:layout_constraintStart_toEndOf="@+id/tv_first_met_day_slash_1"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_first_met_day_slash_2"
                style="@style/PretendardRegular.999999.18dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:text="@string/slash"
                app:layout_constraintBaseline_toBaselineOf="@id/et_first_met_day_year"
                app:layout_constraintEnd_toStartOf="@+id/et_first_met_day_day"
                app:layout_constraintStart_toEndOf="@+id/et_first_met_day_month" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_first_met_day_day"
                style="@style/PretendardRegular.000000.18dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="center"
                android:hint="@string/day_hint"
                android:inputType="date"
                android:maxLength="2"
                android:textColorHint="@color/color_999999"
                android:textCursorDrawable="@drawable/cursor_bg_a735ff"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_first_met_day_slash_2"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/v_first_met_day_underline"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10.5dp"
                android:background="@drawable/selector_bg_unclick_dedee2_click_a735ff"
                app:layout_constraintTop_toBottomOf="@+id/et_first_met_day_year" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:fitsSystemWindows="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/gl_end"
            app:layout_constraintStart_toStartOf="@+id/gl_start">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_first_met_day_next"
                style="@style/PretendardRegular.ffffff.16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_bg_disable_dedee2_enable_c983ff_radius_8"
                android:enabled="@{vm.isValidFirstMetDay()}"
                android:gravity="center"
                android:paddingVertical="18.5dp"
                android:text="@string/done"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="0dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_v_0591"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.0591" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_v_1475"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1475" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_v_3300"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3300" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>